--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-social-login-buttons": "^3.6.0",
     "react-toastify": "^8.1.0",
     "redux": "^4.1.2",
     "redux-saga": "^1.1.3",
