--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
-    "antd": "^4.16.13",
+    "antd": "^4.16.6",
     "axios": "^0.21.0",
     "babel-loader": "^8.1.0",
     "global": "^4.4.0",
@@ -29,7 +29,12 @@
     "react-toastify": "^8.1.0",
     "redux": "^4.1.2",
     "redux-saga": "^1.1.3",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "@ant-design/icons": "^4.6.2",
+    "apexcharts": "^3.27.1",
+    "install": "^0.13.0",
+    "react-apexcharts": "^1.3.9",
+    "styled-components": "^5.3.0"
   },
   "scripts": {
     "start": "craco start",
