--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.6.2",
     "@babel/core": "^7.15.8",
     "@babel/plugin-transform-react-jsx": "^7.10.4",
     "@babel/plugin-transform-react-jsx-self": "^7.10.4",
@@ -14,11 +15,15 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
     "antd": "^4.16.6",
+    "apexcharts": "^3.27.1",
     "axios": "^0.21.0",
     "babel-loader": "^8.1.0",
     "global": "^4.4.0",
+    "install": "^0.13.0",
+    "moment": "^2.29.3",
     "nodemon": "^2.0.15",
     "react": "^17.0.1",
+    "react-apexcharts": "^1.3.9",
     "react-autosuggest": "^10.1.0",
     "react-dom": "^17.0.1",
     "react-facebook-login": "^4.1.1",
@@ -29,12 +34,8 @@
     "react-toastify": "^8.1.0",
     "redux": "^4.1.2",
     "redux-saga": "^1.1.3",
-    "web-vitals": "^0.2.4",
-    "@ant-design/icons": "^4.6.2",
-    "apexcharts": "^3.27.1",
-    "install": "^0.13.0",
-    "react-apexcharts": "^1.3.9",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "craco start",
