--- a/package.json
+++ b/package.json
@@ -1,84 +1,88 @@
 {
-  "name": "clock-shop",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@ant-design/icons": "^4.6.2",
-    "@babel/core": "^7.15.8",
-    "@babel/plugin-transform-react-jsx": "^7.10.4",
-    "@babel/plugin-transform-react-jsx-self": "^7.10.4",
-    "@babel/preset-env": "^7.15.8",
-    "@babel/preset-react": "^7.10.4",
-    "@craco/craco": "^6.4.0",
-    "@reduxjs/toolkit": "^1.4.0",
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.2.2",
-    "antd": "^4.16.6",
-    "apexcharts": "^3.27.1",
-    "axios": "^0.21.0",
-    "babel-loader": "^8.1.0",
-    "global": "^4.4.0",
-    "install": "^0.13.0",
-    "moment": "^2.29.3",
-    "nodemon": "^2.0.15",
-    "react": "^17.0.1",
-    "react-apexcharts": "^1.3.9",
-    "react-autosuggest": "^10.1.0",
-    "react-dom": "^17.0.1",
-    "react-facebook-login": "^4.1.1",
-    "react-redux": "^7.2.2",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
-    "react-social-login-buttons": "^3.6.0",
-    "react-toastify": "^8.1.0",
-    "redux": "^4.1.2",
-    "redux-saga": "^1.1.3",
-    "styled-components": "^5.3.0",
-    "web-vitals": "^0.2.4"
+	"name": "clock-shop",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@ant-design/icons": "^4.6.2",
+		"@babel/core": "^7.15.8",
+		"@babel/plugin-transform-react-jsx": "^7.10.4",
+		"@babel/plugin-transform-react-jsx-self": "^7.10.4",
+		"@babel/preset-env": "^7.15.8",
+		"@babel/preset-react": "^7.10.4",
+		"@craco/craco": "^6.4.0",
+		"@reduxjs/toolkit": "^1.4.0",
+		"@testing-library/jest-dom": "^5.11.6",
+		"@testing-library/react": "^11.2.2",
+		"@testing-library/user-event": "^12.2.2",
+		"antd": "^4.16.6",
+		"apexcharts": "^3.27.1",
+		"axios": "^0.21.0",
+		"babel-loader": "^8.1.0",
+		"global": "^4.4.0",
+		"install": "^0.13.0",
+		"moment": "^2.29.3",
+		"nodemon": "^2.0.15",
+		"react": "^17.0.1",
+		"react-apexcharts": "^1.3.9",
+		"react-autosuggest": "^10.1.0",
+		"react-dom": "^17.0.1",
+		"react-facebook-login": "^4.1.1",
+		"react-redux": "^7.2.2",
+		"react-router-dom": "^5.2.0",
+		"react-scripts": "4.0.1",
+		"react-social-login-buttons": "^3.6.0",
+		"react-toastify": "^8.1.0",
+		"redux": "^4.1.2",
+		"redux-saga": "^1.1.3",
+		"styled-components": "^5.3.0",
+		"web-vitals": "^0.2.4"
+	},
+	"scripts": {
+		"start": "react-scripts --openssl-legacy-provider start",
+		"sever": "json-server --watch db.json",
+		"build": "craco build",
+		"test": "craco test",
+		"eject": "react-scripts eject",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"@babel/preset-react": "^7.16.0",
+		"autoprefixer": "^9.8.8",
+		"babel-cli": "^6.26.0",
+		"gh-pages": "^3.2.3",
+		"postcss": "^7.0.39",
+		"tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
+	},
+	"babel": {
+		"presets": [
+			"@babel/preset-react",
+			"@babel/preset-env"
+		],
+		"plugins": [
+			"@babel/plugin-transform-react-jsx"
+		]
   },
-  "scripts": {
-    "start": "craco start",
-    "sever": "json-server --watch db.json",
-    "build": "craco build",
-    "test": "craco test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@babel/preset-react": "^7.16.0",
-    "autoprefixer": "^9.8.8",
-    "babel-cli": "^6.26.0",
-    "gh-pages": "^3.2.3",
-    "postcss": "^7.0.39",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
-  },
-  "babel": {
-    "presets": [
-      "@babel/preset-react",
-      "@babel/preset-env"
-    ],
-    "plugins": [
-      "@babel/plugin-transform-react-jsx"
-    ]
+  "engines":{
+    "node": "18"
   }
 }
+
